# taskflow-api

./: .gitignore  Cargo.toml  go.mod  main.go  main_test.go  package-lock.json  package.json
prisma/: schema.prisma  seed.ts
prisma/migrations/20260319204103_init/: migration.sql
src/: auth.rs  db.rs  error.rs  main.rs  models.rs
